<package>
  <name>asr_flir_ptu_controller</name>
  <version>0.9.0</version>
  <description>
     asr_flir_ptu_controller is a package to control a flir ptu unit from a action server
  </description>
  <author>Ralph Schleicher</author>
  <author>Patrick Schlosser</author>
  <maintainer email="pascal.meissner@kit.edu">Pascal Meißner</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>asr_flir_ptu_driver</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>asr_flir_ptu_driver</run_depend>
  <!--<depend package="speech_recognition_hub"/>-->
</package>


