<package>
  <name>asr_flir_ptu_driver</name>
  <version>0.9.0</version>
  <description>
     asr_flir_ptu_driver is a package for controlling a flir ptu via (external) msg
     authors: Valerij Wittenbeck, Joachim Gehrung, Pascal Meissner, Patrick Schlosser
  </description>
  <author>Valerij Wittenbeck</author>
  <author>Joachim Gehrung</author>
  <author>Pascal Meißner</author>
  <author>Patrick Schlosser</author>
  <maintainer email="asr-ros@lists.kit.edu">Pascal Meißner</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>wxWidgets</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>wxWidgets</run_depend>
</package>


